tests/miniJava/neg/004851_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( String int [] java ) { return 0 ; } }
